--- a/tutoring_site/templates/base.html
+++ b/tutoring_site/templates/base.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>My Social Site</title>
+    <title>Online Caribbean Education</title>
     <!--Import Google Icon Font-->
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
@@ -20,13 +20,12 @@
         {% block content %} {% endblock content %}
     </div>
 
-    <!--Import jQuery before materialize.js-->
     {% block footer %}
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
-    <script type="text/javascript" src="{% static 'js/master.js' %}"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    {% endblock %}
+    <script type="text/javascript" src="{% static 'js/master.js' %}"></script>
+    {% endblock footer %}
 </body>
 
 </html>
