--- a/tutoring_site/templates/_navbar.html
+++ b/tutoring_site/templates/_navbar.html
@@ -19,10 +19,10 @@
                 <a href="#">Apply</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="#about">About</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
             {% if user.is_authenticated %}
             <ul id="dropdown1" class="dropdown-content">
@@ -39,7 +39,7 @@
                 </ul>
                 <li>
                     <a materialize="dropdown" class='dropdown-button' href='#' data-activates='dropdown1'>
-                        {{user.username}}
+                        {{user.first_name}} {{user.last_name}}
                         <i class="material-icons right">arrow_drop_down</i>
                     </a>
                 </li>
@@ -60,10 +60,10 @@
                 <a href="#">Apply</a>
             </li>
             <li>
-                <a href="#">About</a>
+                <a href="#about">About</a>
             </li>
             <li>
-                <a href="#">Contact</a>
+                <a href="#contact">Contact</a>
             </li>
             {% if user.is_authenticated %}
             <ul id="dropdown2" class="dropdown-content">
