--- a/tutoring_site/templates/base.html
+++ b/tutoring_site/templates/base.html
@@ -16,16 +16,48 @@
 <body>
     <!-- navigation bar -->
     {% include '_navbar.html' %}
-    <div class="container">
+    <div class="container z-depth-4">
         {% block content %} {% endblock content %}
     </div>
 
     {% block footer %}
+    <footer class="page-footer">
+        <div class="container">
+            <div class="row">
+                <div class="col l6 s12">
+                    <h5 class="white-text">Online Caribbean Education</h5>
+                    <p class="grey-text text-lighten-4">Supporting the future with education...</p>
+                </div>
+                <div class="col l4 offset-l2 s12">
+                    <h5 class="white-text">Social Media</h5>
+                    <ul>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!">Facebook</a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!">twitter</a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!">linkedin</a>
+                        </li>
+                        <li>
+                            <a class="grey-text text-lighten-3" href="#!">github</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+        <div class="footer-copyright">
+            <div class="container">
+                © 2018 Copyright | Created by Kevin Oudai
+                <a class="grey-text text-lighten-4 right" href="#!">More Links</a>
+            </div>
+        </div>
+    </footer>
     <!--Import jQuery before materialize.js-->
     <script type="text/javascript" src="https://code.jquery.com/jquery-3.2.1.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/js/materialize.min.js"></script>
-    <script type="text/javascript" src="{% static 'js/master.js' %}"></script>
-    {% endblock footer %}
+    <script type="text/javascript" src="{% static 'js/master.js' %}"></script> {% endblock footer %}
 </body>
 
 </html>
