--- a/tutoring_site/templates/_navbar.html
+++ b/tutoring_site/templates/_navbar.html
@@ -34,7 +34,7 @@
                     </li>
                     <li class="divider"></li>
                     <li>
-                        <a href="#!">Logout</a>
+                        <a href="{% url 'account_logout' %}">Logout</a>
                     </li>
                 </ul>
                 <li>
@@ -45,10 +45,10 @@
                 </li>
             {% else %}
             <li>
-                <a href="#">Login</a>
+                <a href="{% url 'account_login' %}">Login</a>
             </li>
             <li>
-                <a href="#">Sign Up</a>
+                <a href="{% url 'account_signup' %}">Sign Up</a>
             </li>
             {% endif %}
         </ul>
@@ -75,7 +75,7 @@
                 </li>
                 <li class="divider"></li>
                 <li>
-                    <a href="#!">Logout</a>
+                    <a href="{% url 'account_logout' %}">Logout</a>
                 </li>
             </ul>
             <li>
@@ -86,10 +86,10 @@
             </li>
             {% else %}
             <li>
-                <a href="#">Login</a>
+                <a href="{% url 'account_login' %}">Login</a>
             </li>
             <li>
-                <a href="#">Sign Up</a>
+                <a href="{% url 'account_signup' %}">Sign Up</a>
             </li>
             {% endif %}
         </ul>
