--- a/tutoring_site/allauth/templates/account/email_confirm.html
+++ b/tutoring_site/allauth/templates/account/email_confirm.html
@@ -7,25 +7,34 @@
 
 
 {% block content %}
-<h1>{% trans "Confirm E-mail Address" %}</h1>
+<div class="row">
+    <div class="col s10 offset-s1">
+<h1 class="header">{% trans "Confirm E-mail Address" %}</h1>
+<div class="card">
+    <div class="card-stack">
+        <div class="card-content">
+            {% if confirmation %}
 
-{% if confirmation %}
+            {% user_display confirmation.email_address.user as user_display %}
 
-{% user_display confirmation.email_address.user as user_display %}
+            <p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
 
-<p>{% blocktrans with confirmation.email_address.email as email %}Please confirm that <a href="mailto:{{ email }}">{{ email }}</a> is an e-mail address for user {{ user_display }}.{% endblocktrans %}</p>
-
-<form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
-{% csrf_token %}
-    <button type="submit">{% trans 'Confirm' %}</button>
-</form>
-
-{% else %}
-
-{% url 'account_email' as email_url %}
-
-<p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
-
-{% endif %}
+            <form method="post" action="{% url 'account_confirm_email' confirmation.key %}">
+            {% csrf_token %}
+            </div>
+            <div class="card-action">
+                <button class="btn"  type="submit">{% trans 'Confirm' %}</button>
+            </form>
+            </div>
+            {% else %}
+                {% url 'account_email' as email_url %}
+                <p>{% blocktrans %}This e-mail confirmation link expired or is invalid. Please <a href="{{ email_url }}">issue a new e-mail confirmation request</a>.{% endblocktrans %}</p>
+                </div>
+            {% endif %}
+            </div>
+        </div>
+    </div>
+</div>
+</div>
 
 {% endblock %}
