--- a/tutoring_site/allauth/templates/account/signup.html
+++ b/tutoring_site/allauth/templates/account/signup.html
@@ -1,28 +1,63 @@
-{% extends "account/base.html" %} {% load i18n %}
+{% extends "account/base.html" %}
+{% load widget_tweaks %}
+{% load i18n %}
+
 {% block head_title %}
   {% trans "Signup" %}
 {% endblock head_title %}
-{% block content %}
-<div class="row">
-  <div class="col s10 offset-s1">
-    <h1 class="header">{% trans "Sign Up" %}</h1>
-    <div class="card">
-      <div class="card-stack">
-        <div class="card-content">
-          <p>{% blocktrans %}Already have an account? Then please
-            <a href="{{ login_url }}">sign in</a>.{% endblocktrans %}</p>
 
-          <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
-            {% csrf_token %} {{ form.as_p }} {% if redirect_field_value %}
-            <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" /> {% endif %}
+{% block content %}
+  <div class="row">
+    <div class="col s10 offset-s1">
+      <h1 class="header">
+        {% trans "Sign Up" %}
+      </h1>
+      <div class="card">
+        <div class="card-stack">
+          <div class="card-content">
+            <p>
+              {% blocktrans %}
+              Already have an account? Then please
+              <a href="{{ login_url }}">
+                sign in
+              </a>.
+              {% endblocktrans %}
+            </p>
+
+            <form class="signup" id="signup_form" method="post" action="{% url 'account_signup' %}">
+              {% csrf_token %}
+              {% comment %} {{ form.as_p }} {% endcomment %}
+              <div class="input-field">
+                {% render_field form.username|attr:"id:username"|attr:"type:text"|attr:"class:validate" %}
+              </div>
+              <div class="row">
+              <div class="input-field col s6">
+                {% render_field form.email|attr:"id:email"|attr:"type:text"|attr:"class:validate" %}
+              </div>
+              <div class="input-field col s6">
+                {% render_field form.email2|attr:"id:email2"|attr:"type:text"|attr:"class:validate" %}
+              </div>
+              </div>
+              <div class="row">
+                <div class="input-field col s6">
+                  {% render_field form.password1|attr:"id:password1"|attr:"type:text"|attr:"class:validate" %}
+                </div>
+                <div class="input-field col s6">
+                  {% render_field form.password2|attr:"id:password2"|attr:"type:text"|attr:"class:validate" %}
+                </div>
+              </div>
+
+              {% if redirect_field_value %}
+                <input type="hidden" name="{{ redirect_field_name }}" value="{{ redirect_field_value }}" />
+              {% endif %}
+          </div>
+          <div class="card-action">
+            <button class="btn" type="submit">{% trans "Sign Up" %} &raquo;</button>
+          </div>
+          </form>
         </div>
-        <div class="card-action">
-          <button class="btn" type="submit">{% trans "Sign Up" %} &raquo;</button>
-        </div>
-        </form>
       </div>
     </div>
   </div>
-</div>
 {% endblock %}
 
