--- a/tutoring_site/templates/base.html
+++ b/tutoring_site/templates/base.html
@@ -10,7 +10,7 @@
     <link href="https://fonts.googleapis.com/icon?family=Material+Icons" rel="stylesheet">
     <!--Import materialize.css-->
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/materialize/0.100.2/css/materialize.min.css">
-    <link type="text/css" rel="stylesheet" href="{% static 'css/master.css' %}" />
+    {% comment %} <link type="text/css" rel="stylesheet" href="{% static 'css/master.css' %}" /> {% endcomment %}
 </head>
 
 <body>
