--- a/tutoring_site/templates/_navbar.html
+++ b/tutoring_site/templates/_navbar.html
@@ -8,7 +8,7 @@
             </div>
             {% endcomment %} Online Caribbean Education
         </a>
-        <a href="#" data-activates="mobile-demo" class="button-collapse">
+        <a href="{% url 'home' %}" data-activates="mobile-demo" class="button-collapse">
             <i class="material-icons">menu</i>
         </a>
         <ul id="nav-mobile" class="right hide-on-med-and-down">
